<resources>
    <string name="app_name">VerThome</string>
    <string name="web_client_id">561675601566-jv4lgc2lldpopv4jas4pj6drn5fp1mi6.apps.googleusercontent.com</string>
    <string name="your_life_seamlessly_automated">Your Life, Seamlessly Automated.</string>
    <string name="welcome_to_verthome">Welcome To Verthome,</string>
    <string name="todo">TODO</string>
    <string name="get_start">Get Start</string>
    <string name="image1">TODO</string>
    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signup">SignUp</string>
    <string name="logout">Logout</string>
    <string name="enter_your_password">Enter Your password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="google_login">Google Login</string>
    <string name="always_connected">Always connected !</string>
    <string name="verthome">VerThome</string>
    <string name="account">Account</string>
    <string name="contact">Contact</string>
    <string name="about_verthome">About VerThome</string>
    <string name="anshuman_mahanta">Anshuman Mahanta</string>
    <string name="mukesh_bala">Mukesh Bala</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="phone">Phone</string>
    <string name="profile">Profile</string>
    <string name="sourav_pati">Sourav Pati</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="about_us">About Us</string>
    <string name="base">base</string>
    <string name="developers">Developers</string>
    <string name="about">About</string>
    <string name="home2">Home2</string>
    <string name="home1">Home1</string>
    <string name="back">back</string>
    <string name="dashboard">DashBoard</string>
    <string name="title">Title</string>
    <string name="morning">Morning,</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="lights">Lights</string>
    <string name="light1">light1</string>
    <string name="connection_status">Connection Status</string>
    <string name="connected">Connected</string>
    <string name="room_light">Room Light</string>
    <string name="kitchen_light">Kitchen Light</string>
    <string name="hall_light">Hall Light</string>
    <string name="dim_light">Dim Light</string>
    <string name="light_on">Light On:</string>
    <string name="plug_on">Plug On:</string>
    <string name="plugs">Plugs</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="air_conditioner_2">Air Conditioner 2</string>
    <string name="ac_on">Ac On:</string>
    <string name="anshumah_mahanta">Anshumah Mahanta</string>
    <string name="sourav_kumar_pati">Sourav Kumar Pati</string>
    <string name="ac">AC</string>
    <string name="air_conditioner_1">Air Conditioner 1</string>
    <string name="enter_credentials">Enter Credentials:</string>
    <string name="enter_your_title">Enter Your Title</string>
    <string name="address">Address</string>
    <string name="enter_your_address">Enter Your Address</string>
    <string name="host_id">Host id</string>
    <string name="save">Save</string>
    <string name="view">view</string>
    <string name="fan">Fan</string>
    <string name="indoor_fan">Indoor Fan</string>
    <string name="bedroom_fan">BedRoom Fan</string>
    <string name="celing_fan">Celing Fan</string>
    <string name="fan_on">Fan on:</string>
    <string name="_50">50%</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="android_iot_lead">Android/Iot Lead</string>
    <string name="more">More!</string>
    <string name="link">link</string>
    <string name="ui_ux_lead">UI/UX Lead</string>
    <string name="python_lead">Python Lead</string>
    <string name="tv">TV</string>
    <string name="tv_on">TV on:</string>
    <string name="_29_01_2022">29/01/2022</string>
    <string name="fetching_location_n_and_temperature">Fetching location \n and temperature...</string>
    <string name="rain">Rain</string>
    <string name="units_4">Units:4</string>
    <string name="units_2">Units:2</string>
    <string name="power_plugs">Power Plugs</string>
    <string name="units_1">Units:1</string>
    <string name="update">Update</string>
    <string name="update_credentials">Update Credentials:</string>
    <string name="enter_host_id">Enter Host Id</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="write_your_feedback_here">Write your feedback here...</string>
    <string name="we_value_your_feedback">We value your feedback!</string>
    <string name="plug1">Plug1</string>
    <string name="plug2">Plug2</string>
    <string name="plug3">Plug3</string>
    <string name="plug4">Plug4</string>
    <string name="souravpati452_gmail_com">souravpati452@gmail.com</string>
    <string name="_919556775778">+919556775778</string>
    <string name="devteam">DevTeam</string>
    <string name="sign_up">Sign Up</string>
    <string name="about_app">About App</string>
    <string name="save_settings">Save Settings</string>
    <string name="low_priority">Low Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="high_priority">High Priority</string>
    <string name="notification_priority">Notification Priority</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="vibration">Vibration</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="notification">Notification</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="permission_required">Permission Required</string>
    <string name="backimage">backimage</string>
    <string name="user">User</string>
    <string name="enterbutton">enterbutton</string>
    <string name="shareimage">shareimage</string>
    <string name="share">Share</string>
    <string name="githubrepository">githubrepository</string>
    <string name="github_repository">GitHub Repository</string>
    <string name="iamgw1">Iamgw1</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="version_1_1">Version 1.1</string>
    <string name="_2025_u00a9_by_hydra">2025 © By Hydra.</string>
    <string name="add_layout">Add Layout</string>
    <string name="your_terms_and_conditions_go_here">Your Terms and Conditions go here...</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="accept">Accept</string>
    <string name="contact_us">Contact Us</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_message">Your Message</string>
    <string name="send_message">Send Message</string>
    <string name="by_team_hydra">By Team Hydra</string>
    <string name="i_agree_to_the_permission">I agree to the Permission..</string>
    <string name="head1">head1</string>
    <string name="c">C--</string>
    <string name="disconected">Disconected</string>
    <string name="v">V--</string>
    <string name="verthome_is_the_ultimate_companion_for_your_smart_home_giving_you_complete_control_and_security_at_your_fingertips_acting_as_your_home_s_master_control_hub_it_lets_you_remotely_manage_appliances_adjust_camera_angles_and_monitor_real_time_video_feeds_ensuring_everything_runs_smoothly_whether_you_re_at_home_or_away_n_nwith_built_in_smart_security_features_verthome_continuously_tracks_movement_outside_your_home_and_alerts_you_instantly_if_any_unusual_activity_is_detected_whether_it_s_your_backyard_garden_or_entrance_you_ll_always_know_what_s_happening_if_no_one_is_home_verthome_records_and_stores_detected_events_so_you_can_review_them_anytime_n_ndesigned_for_ease_of_use_the_app_provides_seamless_remote_access_allowing_you_to_control_and_automate_devices_with_just_a_few_taps_from_switching_lights_and_appliances_on_or_off_to_monitoring_live_feeds_verthome_keeps_you_connected_to_your_home_no_matter_where_you_are_n_nstay_in_control_stay_secure_and_experience_the_future_of_home_automation_with_verthome">Verthome is the ultimate companion for your smart home, giving you complete control and security at your fingertips. Acting as your home\'s master control hub, it lets you remotely manage appliances, adjust camera angles, and monitor real-time video feeds, ensuring everything runs smoothly whether you\'re at home or away.\n\nWith built-in smart security features, Verthome continuously tracks movement outside your home and alerts you instantly if any unusual activity is detected. Whether it\'s your backyard, garden, or entrance, you’ll always know what\'s happening. If no one is home, Verthome records and stores detected events, so you can review them anytime.\n\nDesigned for ease of use, the app provides seamless remote access, allowing you to control and automate devices with just a few taps. From switching lights and appliances on or off to monitoring live feeds, Verthome keeps you connected to your home no matter where you are.\n\nStay in control, stay secure, and experience the future of home automation with Verthome.</string>
    <!-- res/values/ids.xml -->

    <item name="home1" type="id" />
    <item name="home2" type="id" />
    <item name="home3" type="id" />
    <item name="home4" type="id" />
    <item name="home5" type="id" />


</resources>