<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
    <item android:title="Home"
        android:id="@+id/nav_home1"
        android:icon="@drawable/home"/>


    </group>


    <item android:title="@string/account">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/profile"
                    android:enabled="true"/>
                <item android:id="@+id/logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout1"
                    android:enabled="true"/>
            </group>
        </menu>
    </item>


    <item android:title="@string/contact">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/nav_email"
                    android:title="@string/contact_us"
                    android:icon="@drawable/contact"
                    android:enabled="true"/>
                <item android:id="@+id/Feedback"
                    android:title="@string/feedback"
                    android:icon="@drawable/feedback"
                    android:enabled="true"/>
            </group>
        </menu>
    </item>


    <item android:title="@string/about_us">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/Devteam"
                    android:title="@string/devteam"
                    android:icon="@drawable/about"
                    android:enabled="true"/>
                <item android:id="@+id/AboutVerthome"
                    android:title="@string/about_app"
                    android:icon="@drawable/info"
                    android:enabled="true"/>
            </group>
        </menu>
    </item>
</menu>
