<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TermConditions"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permission_required"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/termsTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_terms_and_conditions_go_here"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:padding="8dp" />
    </ScrollView>

    <CheckBox
        android:id="@+id/agreeCheckBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="48dp"
        android:text="@string/i_agree_to_the_permission"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acceptButton1"
        android:layout_width="200dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/accept"

        android:background="@drawable/button_back"
        android:textColor="@color/white"
        android:padding="10dp"
        />

</LinearLayout>
