<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:background="#00FFFFFF"


    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="889dp"
        tools:ignore="MissingConstraints,UselessParent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            >

            <ImageView
                android:id="@+id/aboutback1"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back"
                android:padding="20dp"

                app:srcCompat="@drawable/back_arrow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/light"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/playwriteregular"
                android:text="@string/enter_credentials"
                android:textAlignment="center"
                android:textColor="#6c5dd2"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/light"
                    android:text="@string/title"
                    android:textColor="#6c5dd2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/Titleadd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"

                    android:background="@drawable/background_edit"
                    android:ems="10"
                    android:hint="@string/enter_your_title"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    tools:ignore="Autofill,VisualLintTextFieldSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/light"
                    android:text="@string/address"
                    android:textColor="#6c5dd2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/addressadd"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_edit"

                    android:ems="10"
                    android:hint="@string/enter_your_address"
                    android:importantForAccessibility="yes"
                    android:importantForAutofill="yes"

                    android:textAlignment="center"
                    app:passwordToggleEnabled="true"
                    tools:ignore="Autofill,TextFields,VisualLintTextFieldSize" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"

                android:orientation="vertical">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/light"
                    android:text="@string/host_id"
                    android:textColor="#6c5dd2"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/hostid"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"

                    android:autofillHints="host id"
                    android:background="@drawable/background_edit"
                    android:ems="10"
                    android:hint="@string/enter_host_id"
                    android:inputType="textEmailAddress"
                    android:textAlignment="center"
                    tools:ignore="VisualLintTextFieldSize" />
            </LinearLayout>


            <Button
                android:id="@+id/saveadd"
                style="@android:style/Widget.Button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/button_back"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/view"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/background_intro" />


        </LinearLayout>


    </LinearLayout>
    </ScrollView>

</LinearLayout>