<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"

    tools:context=".Feedback"
    android:id="@+id/main"
    android:fitsSystemWindows="true"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/aboutback11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:padding="20dp"

            app:srcCompat="@drawable/back_arrow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/light"/>

    </RelativeLayout>



    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_value_your_feedback"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="10dp"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:numStars="5"
            android:stepSize="1.0"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/etFeedback"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:autofillHints="Text"
            android:hint="@string/write_your_feedback_here"
            android:gravity="top"
            android:background="@android:drawable/edit_text"
            android:padding="10dp"
            android:textSize="16sp"
            android:inputType="textMultiLine"
            android:minLines="5"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSendFeedback"
            android:background="@drawable/button_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_marginTop="16dp"
            android:backgroundTint="#6c5dd2"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</LinearLayout>
